Fixed z-index for select

--- a/src/styles/components/select.less
+++ b/src/styles/components/select.less
@@ -113,7 +113,7 @@
 
 .selectize-dropdown {
     position: absolute;
-    z-index: 10;
+    z-index: 1000;
     margin: -8px 0 0 0;
     background: @white;
     border: 1px solid @shakespeare;
